--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ python:
     - "3.4"
 # command to install dependencies
 install:
-    - "pip install -r requirements.txt"
+    - "python setup.py install"
 # command to run tests
 script: bin/test
